<resources>
    <string name="app_name">Always active</string>
    <string name="mn">Пн</string>
    <string name="tu">Вт</string>
    <string name="wd">Ср</string>
    <string name="th">Чт</string>
    <string name="fr">Пт</string>
    <string name="st">Сб</string>
    <string name="sn">Вс</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_24">24</string>
    <string name="_25">25</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="_28">28</string>
    <string name="_29">29</string>
    <string name="_30">30</string>
    <string name="_31">31</string>
    <string name="_32">32</string>
    <string name="_33">33</string>
    <string name="_34">34</string>
    <string name="_35">35</string>
    <string name="mouth">Месяц</string>
    <string name="now">Сейчас:</string>
    <string name="next">Далее:</string>
    <string name="next_next">Затем:</string>
    <string name="activity_is_not">Событие не запланираванно</string>
    <string name="start_time">0:00</string>
    <string name="add">ADD</string>
    <string name="main">MAIN</string>
    <string name="today">TODAY</string>
    <string name="your_notes_tv">Ваши заметки</string>
    <string name="default1">Введите название события:</string>
    <string name="default2">Добавить</string>
    <string name="default3">Введите дату:</string>
    <string name="today_">Сегодня</string>
</resources>